<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.opengroup.osdu.search</groupId>
    <artifactId>search-acceptance-test</artifactId>
    <version>0.30.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <os-core-test.version>0.1.12</os-core-test.version>
        <lombok.version>1.18.46</lombok.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <argLine>
            --add-opens=java.base/java.util=ALL-UNNAMED
            --add-opens=java.base/java.lang=ALL-UNNAMED
            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
            --add-opens=java.base/java.text=ALL-UNNAMED
            --add-opens=java.desktop/java.awt.font=ALL-UNNAMED
        </argLine>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.opengroup.osdu</groupId>
            <artifactId>os-core-test</artifactId>
            <version>${os-core-test.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>${repo.releases.id}</id>
            <url>${repo.releases.url}</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>${publish.releases.id}</id>
            <url>${publish.releases.url}</url>
        </repository>
        <snapshotRepository>
            <id>${publish.snapshots.id}</id>
            <url>${publish.snapshots.url}</url>
        </snapshotRepository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>Default</id>
            <activation>
                <property>
                    <name>!repo.releases.id</name>
                </property>
            </activation>
            <properties>
                <repo.releases.id>community-maven-repo</repo.releases.id>
                <publish.snapshots.id>community-maven-via-job-token</publish.snapshots.id>
                <publish.releases.id>community-maven-via-job-token</publish.releases.id>
                <repo.releases.url>https://community.opengroup.org/api/v4/groups/17/-/packages/maven</repo.releases.url>
                <publish.snapshots.url>https://community.opengroup.org/api/v4/projects/44/packages/maven</publish.snapshots.url>
                <publish.releases.url>https://community.opengroup.org/api/v4/projects/44/packages/maven</publish.releases.url>
            </properties>
        </profile>
    </profiles>
</project>
